erDiagram
  ACQUISITION_SOURCES ||--o{ USERS : "acquisition_source_id"
  USERS ||--o{ USER_PREFERENCES : "user_id"
  USERS ||--o{ USER_SESSIONS : "user_id"
  USERS ||--o{ TOKENS : "user_id"
  USERS ||--o{ TWO_FA : "user_id"
  USERS ||--o{ LOGIN_LOGS : "user_id"
  USERS ||--o{ ADMIN_PERMISSIONS : "user_id"
  ACQUISITION_SOURCES ||--o{ INFLUENCERS : "source_id"
  USERS {
    uuid user_id PK
    user_role role
    string full_name
    string email
    string phone_country_code
    user_status status
    uuid acquisition_source_id FK
    uuid linked_visitor_id FK
  }
  USER_PREFERENCES {
    uuid user_id PK
  }
  USER_SESSIONS {
    uuid session_id PK
    uuid user_id FK
  }
  TOKENS {
    uuid token_id PK
    uuid user_id FK
    token_type type
  }
  TWO_FA {
    uuid user_id PK
    two_fa_type type
  }
  LOGIN_LOGS {
    uuid log_id PK
    uuid user_id FK
  }
  ADMIN_PERMISSIONS {
    uuid user_id PK
  }
  ACQUISITION_SOURCES {
    uuid source_id PK
    string name
    source_type type
  }
  INFLUENCERS {
    uuid influencer_id PK
    uuid source_id FK
    string name
  }